--- a/ToDolistTestApp/ToDolistTestApp.csproj
+++ b/ToDolistTestApp/ToDolistTestApp.csproj
@@ -13,5 +13,11 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="model\" />
+    <Folder Include="Pages\" />
   </ItemGroup>
 </Project>
